--- a/index.html
+++ b/index.html
@@ -93,11 +93,13 @@
 						<hr>
 						<div class="clearfix"></div>
 					</div>
-					<p class="intro">2017年2月2日，由中国秦川联盟批准创建雨墨情报局</p>
+					<p>2017年2月2日，由地球秦川联盟批准创建“明镜三阁”——雨墨阁、晨诚阁、子龙阁，直属于地球秦川联盟。2018年2月2日正式完善开始运营。</p>
+					<p>后来，由于2018年9月21日“921齐天泽”事件，地球秦川联盟解体，明镜三阁合并为雨墨情报局，宣布独立。</p>
+					<p>2018年10月7日，地球秦川联盟重组，更名为中国秦川联盟，雨墨情报局和中国秦川联盟加盟。</p>
 					<ul class="about-list">
 						<li>
 							<span class="fa fa-dot-circle-o"></span>
-							<strong>任务</strong> - <em>We deliver uniqueness and quality</em>
+							<strong>任务</strong> - <em>收集和存储来自各处（尤其是中国秦川联盟和中国红云局）的情报</em>
 						</li>
 						<li>
 							<span class="fa fa-dot-circle-o"></span>
