--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <div id="tf-home" class="text-center">
 	<div class="overlay">
 		<div class="content">
-		  <h1><strong><span class="color">雨墨局</span></strong></h1>
+		  <h1><strong><span class="color">雨墨情报局</span></strong></h1>
 		  <p class="lead">YuMo<strong> Intelligence</strong> Bureau</p>
 			<a href="#tf-about" class="fa fa-angle-down page-scroll"></a>
 		</div>
@@ -95,20 +95,14 @@
 					</div>
 					<p>2017年2月2日，由地球秦川联盟批准创建“明镜三阁”——雨墨阁、晨诚阁、子龙阁，直属于地球秦川联盟。2018年2月2日正式完善开始运营。</p>
 					<p>后来，由于2018年9月21日“921齐天泽”事件，地球秦川联盟解体，明镜三阁合并为雨墨情报局，宣布独立。</p>
-					<p>2018年10月7日，地球秦川联盟重组，更名为中国秦川联盟，雨墨情报局和中国秦川联盟加盟。</p>
+				  <p>2018年10月7日，地球秦川联盟重组，更名为中国秦川联盟，雨墨情报局和中国秦川联盟加盟。</p>
 					<ul class="about-list">
 						<li>
 							<span class="fa fa-dot-circle-o"></span>
 							<strong>任务</strong> - <em>收集和存储来自各处（尤其是中国秦川联盟和中国红云局）的情报</em>
 						</li>
-						<li>
-							<span class="fa fa-dot-circle-o"></span>
-							<strong>技能</strong> - <em>Delivering fast and excellent results</em>
-						</li>
-						<li>
-							<span class="fa fa-dot-circle-o"></span>
-							<strong>Clients</strong> - <em>Satisfied clients thanks to our experience</em>
-						</li>
+						<li> <span class="fa fa-dot-circle-o"></span> <strong>技能</strong> - <em>存储各类情报</em></li>
+						<li> <span class="fa fa-dot-circle-o"></span> <strong>服务</strong> - <em>暂不提供对外服务</em></li>
 					</ul>
 				</div>
 			</div>
@@ -133,9 +127,9 @@
 					<div class="thumbnail">
 						<img src="img/team/01.jpg" alt="..." class="img-circle team-img">
 						<div class="caption">
-							<h3>Jenn Gwapa</h3>
-							<p>CEO / Founder</p>
-							<p>Do not seek to change what has come before. Seek to create that which has not.</p>
+						  <h3>Leopold Fu/夏侯启</h3>
+						  <p>创建者</p>
+						  <p>中国秦川联盟创始人，批准创建雨墨情报局，现任中国秦川联盟全华委员会主席。</p>
 						</div>
 					</div>
 				</div>
@@ -143,15 +137,15 @@
 				<div class="item">
 					<div class="thumbnail">
 						<img src="img/team/02.jpg" alt="..." class="img-circle team-img">
-						<div class="caption">
-							<h3>Jenn Gwapa</h3>
-							<p>CEO / Founder</p>
-							<p>Do not seek to change what has come before. Seek to create that which has not.</p>
+					  <div class="caption">
+					    <h3>None/韩宇诚</h3>
+					    <p>创建者</p>
+						  <p>中国秦川联盟早期盟员之一，现任中国秦川联盟全华委员会副主席。</p>
 						</div>
 					</div>
 				</div>
 
-				<div class="item">
+				<!--<div class="item">
 					<div class="thumbnail">
 						<img src="img/team/03.jpg" alt="..." class="img-circle team-img">
 						<div class="caption">
@@ -182,15 +176,15 @@
 							<p>Do not seek to change what has come before. Seek to create that which has not.</p>
 						</div>
 					</div>
-				</div>
+				</div>-->
 
-				<div class="item">
+			  <div class="item">
 					<div class="thumbnail">
 						<img src="img/team/01.jpg" alt="..." class="img-circle team-img">
 						<div class="caption">
-							<h3>Jenn Gwapa</h3>
-							<p>CEO / Founder</p>
-							<p>Do not seek to change what has come before. Seek to create that which has not.</p>
+						  <h3>None/白圆</h3>
+							<p>创建者</p>
+							<p>中国秦川联盟早期盟员之一，现任中国秦川联盟全华委员会常务委员会委员。</p>
 						</div>
 					</div>
 				</div>
@@ -198,15 +192,15 @@
 				<div class="item">
 					<div class="thumbnail">
 						<img src="img/team/02.jpg" alt="..." class="img-circle team-img">
-						<div class="caption">
-							<h3>Jenn Gwapa</h3>
-							<p>CEO / Founder</p>
-							<p>Do not seek to change what has come before. Seek to create that which has not.</p>
+					  <div class="caption">
+							<h3>None/李源</h3>
+							<p>创建者</p>
+							<p>中国秦川联盟早期盟员之一，现任中国秦川联盟全华委员会副主席。</p>
 						</div>
 					</div>
 				</div>
 
-				<div class="item">
+				<!--<div class="item">
 					<div class="thumbnail">
 						<img src="img/team/03.jpg" alt="..." class="img-circle team-img">
 						<div class="caption">
@@ -214,7 +208,7 @@
 							<p>CEO / Founder</p>
 							<p>Do not seek to change what has come before. Seek to create that which has not.</p>
 						</div>
-					</div>
+					</div>-->
 				</div>
 			</div>
 			
@@ -227,38 +221,37 @@
 <div id="tf-services" class="text-center">
 	<div class="container">
 		<div class="section-title center">
-			<h2>Take a look at <strong>our services</strong></h2>
-			<div class="line">
+		  <h2>我们的<strong>服务</strong></h2>
+		  <div class="line">
 				<hr>
 			</div>
 			<div class="clearfix"></div>
-			<small><em>Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</em></small>
-		</div>
+			<small><em>暂不提供对外服务</em></small></div>
 		<div class="space"></div>
 		<div class="row">
 			<div class="col-md-3 col-sm-6 service">
 				<i class="fa fa-desktop"></i>
-				<h4><strong>Web design</strong></h4>
-				<p>The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
+			  <h4><strong>等待更新</strong></h4>
+				<p>等待更新</p>
 			</div>
 
 			<div class="col-md-3 col-sm-6 service">
 				<i class="fa fa-mobile"></i>
-				<h4><strong>Mobile Apps</strong></h4>
-				<p>The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
+			  <h4><strong>等待更新</strong></h4>
+				<p>等待更新</p>
 			</div>
 
 			<div class="col-md-3 col-sm-6 service">
 				<i class="fa fa-camera"></i>
-				<h4><strong>Photography</strong></h4>
-				<p>The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
+			  <h4><strong>等待更新</strong></h4>
+				<p>等待更新</p>
 			</div>
 
 			<div class="col-md-3 col-sm-6 service">
 				<i class="fa fa-bullhorn"></i>
-				<h4><strong>Marketing</strong></h4>
-				<p>The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
-			</div>
+				<h4><strong>等待更新</strong></h4>
+				<p>等待更新</p>
+		  </div>
 		</div>
 	</div>
 </div>
@@ -272,7 +265,7 @@
 			<div class="section-title center">
 				<h2>Some of <strong>our Clients</strong></h2>
 				<div class="line">
-					<hr>
+				  <hr>
 				</div>
 			</div>
 			<div id="clients" class="owl-carousel owl-theme">
@@ -470,38 +463,7 @@
 
 <!-- Testimonials Section
 ==========================================-->
-<div id="tf-testimonials" class="text-center">
-	<div class="overlay">
-		<div class="container">
-			<div class="section-title center">
-				<h2><strong>Our clients’</strong> testimonials</h2>
-				<div class="line">
-					<hr>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-8 col-md-offset-2">
-					<div id="testimonial" class="owl-carousel owl-theme">
-						<div class="item">
-							<h5>This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</h5>
-							<p><strong>Dean Martin</strong>, CEO Acme Inc.</p>
-						</div>
-
-						<div class="item">
-							<h5>This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</h5>
-							<p><strong>Dean Martin</strong>, CEO Acme Inc.</p>
-						</div>
-
-						<div class="item">
-							<h5>This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</h5>
-							<p><strong>Dean Martin</strong>, CEO Acme Inc.</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
+<div id="tf-testimonials" class="text-center"> </div>
 
 <!-- Contact Section
 ==========================================-->
@@ -512,12 +474,13 @@
 			<div class="col-md-8 col-md-offset-2">
 
 				<div class="section-title center">
-					<h2>Feel free to <strong>contact us</strong></h2>
-					<div class="line">
+				  <h2><strong>联系</strong>我们</h2>
+				  <div class="line">
 						<hr>
 					</div>
 					<div class="clearfix"></div>
-					<small><em>Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</em></small>            
+					<p><small><em>等待更新</em></small></p>
+					<p><small><em>Waiting for update</em></small></p>
 				</div>
 
 				<form>
@@ -552,14 +515,14 @@
 <nav id="footer">
 	<div class="container">
 		<div class="pull-left fnav">
-			<p>Copyright &copy; 2016.Company name All rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></p>
+		  <p>Copyright &copy; 2017~2019 YuMo Intelligence Bureau</p>
 		</div>
 		<div class="pull-right fnav">
 			<ul class="footer-social">
-				<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-				<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+				<li><a href="https://www.facebook.com"><i class="fa fa-facebook"></i></a></li>
+				<!--<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
 				<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-				<li><a href="#"><i class="fa fa-twitter"></i></a></li>
+				<li><a href="#"><i class="fa fa-twitter"></i></a></li>-->
 			</ul>
 		</div>
 	</div>
